--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2728,107 +2728,107 @@ stories:
   domain: http://www.gwinnettdailypost.com/
   link: https://www.gwinnettdailypost.com/news/labor-secretary-alex-acosta-has-resigned/video_0d7ac60c-1510-5d5b-a2c1-142a4af286ee.html
 images:
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-- name: carry-load-carryload-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-hot-spicy.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit-5.jpg
-- name: art-museum-art-museum-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-neo-instinct.jpg
-- name: old-gas-pumps-oldgaspumps-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-constitution.jpg
-- name: crow-crow-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-diego-rivera1.jpg
-- name: oldroad-old-road-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-sand-paper.jpg
-- name: downtown-trucksilo-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-electricity.jpg
-- name: trucksilo-trucksilo-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-electricity.jpg
-- name: birdhouse-birdhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-missle.jpg
-- name: miamibeach-miamibeach-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-constitution.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-colored-circuits.jpg
-- name: art-museum-art-museum-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-electricity.jpg
-- name: server-cloud-server-racks-door-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-3.jpg
-- name: blossombar-purple-storm-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-24-99.jpg
+- name: oldroad-old-road-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alien-goggles.jpg
+- name: berlinwall2-berlinwall-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-mucha-mult.jpg
+- name: school-clouds-church-clouds-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-atari-missle.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dry-skin.jpg
+- name: old-gas-pumps-oldgaspumps-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-smooth-ride.jpg
+- name: oldcabin-store-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crabapple.jpg
+- name: machine-road-machine-road-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-dys-1.jpg
+- name: white-house-lawn-white-house-lawn-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-matrix.jpg
+- name: rockingchair-rockingchair-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-light-dali.jpg
+- name: downtheline-downtheline-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gred-mash.jpg
+- name: old-granary-field-granaryfield-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-hot-spicy.jpg
+- name: old-granary-field-oldhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-post-modern.jpg
+- name: oldhouse-granaryfield-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-internet-numbers.jpg
+- name: ellis-island-ellisisland-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-neo-instinct.jpg
+- name: mediterranean-mediterranean-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-alien-goggles.jpg
+- name: locked-up-steam-lock-up-steam-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-light-dali.jpg
+- name: abe-lincoln-one-post-modern-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-07-91.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
+- name: oldhouse-oldhouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-ww2-color.jpg
+- name: catacombs-catacombs-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-green-zuma.jpg
+- name: windowmountain-window-mountain-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-deep-connections.jpg
+- name: meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
+- name: old-church-oldchurch-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-alberto-giacometti.jpg
+- name: fence-fence-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-internet-numbers.jpg
+- name: old-church-oldchurch-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-crafty-painting.jpg
+- name: powerlines-power-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-sand-paper.jpg
+- name: dragon-desert-desert-dragon-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-creativity.jpg
+- name: capital-battle-capitolbattle-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-diego-rivera1.jpg
+- name: wind-mills-windmills-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colored-circuits.jpg
+- name: old-door-lock-old-door-lock-2-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-post-modern.jpg
+- name: oldhouse-oldhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-sand-paper.jpg
+- name: oldtrain-oldtrain-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-internet-numbers.jpg
+- name: capital-battle-capitolbattle-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-really-hot.jpg
+- name: nyc-flag-api-conversations-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-atari-asteroids.jpg
+- name: beach-rocks-beach-rocks-currents-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kandinsky-bv.jpg
+- name: amusement-park-amusement-park-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-dream.jpg
+- name: bluelake-gan-vogh-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-00-00-00.jpg
+- name: liberty-back-statue-liberty-back-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-paper.jpg
+- name: nyc-flag-nycflag-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-electricity.jpg
+- name: supreme-court-supremecourt-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-soul.jpg
 - name: flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
-- name: catacombs-catacombs-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purple-pond.jpg
-- name: paris-paris-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-purple-pond.jpg
-- name: fence-mexico-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-pablo-blue.jpg
-- name: window-window-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-internet-numbers.jpg
-- name: statue-of-liberty-front-view-statueofliberty-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-kandinsky-bv.jpg
-- name: oldtrain-oldtrain-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gred-mash.jpg
-- name: oldcabin-store-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-space-pizza.jpg
-- name: server-cloud-server-racks-door-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-light-dali.jpg
-- name: crow_mucha_mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
-- name: status-berlin-status-berlin-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-china-prop.jpg
-- name: white-house-whitehouse-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-hot-spicy.jpg
-- name: window-window-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-hot-spicy.jpg
-- name: paris-paris-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-sand-paper.jpg
-- name: ellis-island-ellisisland-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-yellow-paper.jpg
-- name: oldcabin-store-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colorful-blocks.jpg
-- name: gypsymosaic-gypsy-eyes-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-space-pizza.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
-- name: stories-downtheline-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtheline-dali-three.jpg
-- name: abandonedbuildings_rainbow_festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_rainbow_festival.jpg
-- name: san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
-- name: curtain-curtain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-aqua.jpg
-- name: white-house-whitehouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-sand-paper.jpg
-- name: oldhotel-oldhotel-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-oily-mcoilface.jpg
-- name: oldsmallboat-oldsmallboat-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-internet-numbers.jpg
-- name: dc-statue-dcstatue-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-ww2-color.jpg
-- name: copper-circuit-IMG_6441.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_6441.jpg
-- name: window-window-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-bright-sand.jpg
-- name: abandonedbuildings_alberto_giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_alberto_giacometti.jpg
-- name: stories-4882162452-fa3126b38d-b-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
-- name: docks-docks-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-clean-view.jpg
-- name: old-church-oldchurch-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-colored-circuits.jpg
-- name: old-cabin-oldcabin-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-crunch-paper.jpg
-- name: birdhouse-birdhouse-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-plentiful.jpg
-- name: aws-s3-stories-cityscape-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cityscape-dali-three.jpg
-- name: powerlines-power-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-purp-paper.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-propaganda-leaflets.jpg
+- name: trucksilo-trucksilo-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-pablo-blue.jpg
+- name: liberty-back-statue-liberty-back-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-internet-numbers.jpg
+- name: catacombs-catacombs-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-light-dali.jpg
+- name: oldcabin-store.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store.jpg
+- name: downtown-los-angeles-downtown-la-blue-circuit-5.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit-5.JPG
+- name: old-gas-pumps-oldgaspumps-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-circuit.jpg
+- name: walled-garden-walled-garden-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-bright-sand.jpg
+- name: gears-4882162452-fa3126b38d-b-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-constitution.jpg
+- name: gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
 ---
 Groundbreaking For New Hotel Downtown.&nbsp;Flooding Prompts State Of Emergency Declaration For Pine Island.&nbsp;Growlin' Around With George Culver.&nbsp;Business Tips For Improving Brand Reputation.&nbsp;Italian Court Says Wrong Eritrean Accused Of Trafficking.&nbsp;Mermaid Ready To Make Waves.&nbsp;Passengers Violently Ejected From Seats On Turbulent Flight To Australia.&nbsp;Someone Threw A Bathing Suit In My Front Yard!.&nbsp;
